Minor spacing and stylistic fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,16 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  width: 100%;
-  height: 100%;
-}
-
-body {
-  position: relative;
-  width: 100%;
-  min-height: 100%;
-}
 
 @layer utilities {
   .text-balance {
